--- a/dApp/package.json
+++ b/dApp/package.json
@@ -10,7 +10,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "lite-server": "^2.5.3"
+    "lite-server": "^2.5.3",
+    "web3": "^1.0.0-beta.55"
   },
   "author": "",
   "license": "ISC",
