--- a/dApp/package.json
+++ b/dApp/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "latest",
-    "@material-ui/icons": "^4.2.1",
-    "clsx": "latest",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-scripts": "3.0.1",
-    "truffle-contract": "latest",
-    "web3": "latest"
+    "@material-ui/core": "^4.9.2",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/styles": "^4.9.0",
+    "@popperjs/core": "^2.0.5",
+    "clsx": "^1.1.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-scripts": "^3.3.1",
+    "truffle-contract": "^4.0.31",
+    "web3": "^1.2.6"
   },
   "scripts": {
     "start": "react-scripts start",
