--- a/dApp/package.json
+++ b/dApp/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.12.0",
     "react-scripts": "^3.3.1",
     "truffle-contract": "^4.0.31",
+    "truffle-hdwallet-provider": "^1.0.17",
     "web3": "^1.2.6"
   },
   "scripts": {
